Maybe I'll get the github images working one day...

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -17,14 +17,14 @@ SVN is daarom niet per se beter of slechter dan Git, maar is simpelweg gewoon an
 ## Bewijsmateriaal
 De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gemaakt van SVN.  
   
-![](Assets/Images/SVN_commit_log.png)  
+![](Assets/Images/Stage3-SVN_commit_log.png)  
 ^De _commit log_ van de SVN branch waar ik in werkte. Genomen 27-10-2010^
 
-![](Assets/Images/SVN_merge.png)  
+![](Assets/Images/Stage3-SVN_merge.png)  
 ^Een screenshot van _TortoiseMerge_, een tool om _Merge conflicten_ op te lossen. Genomen 13-11-2020^
 
-![](Assets/Images/SVN_new_commit.png)
-^Een screenshot van een nieewe SVN commit. Genomen 9-12-2020^
+![](Assets/Images/Stage3-SVN_new_commit.png)
+^Een screenshot van een nieuwe SVN commit. Genomen 9-12-2020^
 
 ## Feedback bedrijfsbegeleider
 *Je hebt laten zien dat je met SVN uit de voeten kunt en dat je SVN hebt leren doorgronden. Er zijn nog een hoop opties die je niet hebt verkent en ook niet nodig hebt gehad. Zo kan SVN ook distributed (en dus offline) gebruikt worden, maar onze organisatie heeft zoals je aangeeft eigenlijk die behoefte niet.*
