--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -9,7 +9,7 @@ Als Ranshuijsen een nieuwe medewerker of stagair aanneemt, dan dienen zij altijd
 
 De onderstaande screenshot laat zien dat ik alle modules en toetsen die bij deze cursus horen succesvol heb afgerond.
 
-![](Assets/Images/Cursus.png)  
+![](Assets/Images/Stage3-Cursus.png)  
  
 De cursus is opgebouwd uit verschillende teksten en videos met informatie. Na het doorlezen van sommige modules volgt er een korte toets met een aantal meerkeuzevragen over het materiaal van die module. Ik heb deze toetsen allemaal met een 10 afgerond.
 
