--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -23,7 +23,7 @@ De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gem
 ![](Assets/Images/Stage3-SVN_merge.png)  
 ^Een screenshot van _TortoiseMerge_, een tool om _Merge conflicten_ op te lossen. Genomen 13-11-2020^
 
-![](Assets/Images/Stage3-SVN_new_commit.png)
+![](Assets/Images/Stage3-SVN_new_commit.png)  
 ^Een screenshot van een nieuwe SVN commit. Genomen 9-12-2020^
 
 ## Feedback bedrijfsbegeleider
@@ -34,4 +34,4 @@ Het was erg interresant om voor de verandering met een ander versiebeheersysteem
 
 Zoals mijn bedrijfsbegeleider hierboven heeft gezegd, is het wel zo dat ik helaas niet alle onderdelen van SVN die ik nog niet heb gebruikt. Zo heb ik bijvoorbeeld wel een nieuwe branch gemaakt, maar ik heb deze nooit gemerged met de _trunk_ van de SVN repository. Dit mede omdat het CRM migratie project tijdens mijn stage niet zodanig was afgerondt dat dit veilig kon gebeuren. Ik verwacht echter niet dat dit process veel zal verschillen met het merge process van Git, waardoor ik het gemakkelijk zou kunnen oppakken.
 
-Tijdens mijn onderzoek naar SVN ben ik ook nog een ander versiebeheersysteem tegengekomen, genaamd [Mercurial](https://www.mercurial-scm.org/). Ik ben van plan om ook deze in de toekomst eens uit te proberen.
+Tijdens mijn onderzoek naar SVN ben ik ook nog een ander versiebeheersysteem tegengekomen, genaamd [Mercurial](https://www.mercurial-scm.org/). Ik ben van plan om in de toekomst ook dit systeem te gaan onderzoeken.
