--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -9,10 +9,10 @@ Tijdens het werken aan mijn stageopdracht kwamen er twee vraagstukken naar boven
 
 Het eerste probleem waar we tegen aan liepen was het inlogsysteem. In het begin waren wij namelijk van plan om een geleidelijke migratie uit te voeren door onderdelen van het CRM één voor één over te zetten naar een nieuwe, aparte Blazor website. Dit betekende echter dat gebruikers twee keer moesten inloggen om het gehele systeem te kunnen gebruiken, wat niet ideaal was. Ik ben daarom ruim een week lang bezig geweest met het zoeken naar mogelijke oplossingen hiervoor. Dit heb ik gedaan door op het internet te zoeken naar artikelen en forumberichten van mensen die tegen hetzelfde of een soortgelijk probleem aan liepen, en door te onderzoeken hoe zij dit hebben aangepakt en opgelost. De resultaten van dit onderzoek heb ik verwerkt in een ontwerpdocument, die verschillende mogelijke oplossingen voorlegt.
 
-Ook hadden wij besloten om de oude TableGateways ORM te vervangen met Microsoft's EntityFramework. De gehele _Data Access Layer_ (DAL) moest hiervoor worden omgebouwd, wat veel uitdagingen met zich mee bracht. Ik ben ruim een week bezig geweest met uitzoeken welke problemen we tegen aan zouden kunnen lopen, wat de mogelijke oplossingen voor deze problemen zijn, en welke andere beslissingen er gemaakt moesten worden. Ook deze informatie heb ik verwerkt in een onderzoeksdocument.
+Ook hadden wij besloten om de oude TableGateways ORM te vervangen met Microsoft's EntityFramework. De gehele _Data Access Layer_ moest hiervoor worden omgebouwd, wat veel uitdagingen met zich mee bracht. Ik ben ruim een week bezig geweest met uitzoeken welke problemen we tegen aan zouden kunnen lopen, wat de mogelijke oplossingen voor deze problemen zijn, en welke andere beslissingen er gemaakt moesten worden. Ook deze informatie heb ik verwerkt in een onderzoeksdocument.
 
 ## Bewijsmateriaal
-Als bewijsmateriaal voor dit leerdoel heb ik twee ontwerpdocumenten geschreven. In deze documenten staat informatie die de bovenstaande vraagstukken beantwoorden, door verschillende oplossingen voor problemen voor te leggen en door alle beslissingen die gemaakt moesten worden op een rij te zetten. Omdat deze documenten gevoelige informatie bevatten, is het voor mij helaas niet mogelijk om deze op mijn website te plaatsen.
+Als bewijsmateriaal voor dit leerdoel heb ik twee ontwerpdocumenten geschreven. In deze documenten staat informatie die de bovenstaande vraagstukken beantwoorden door verschillende oplossingen voor problemen voor te leggen, en door alle beslissingen die gemaakt moesten worden op een rij te zetten. Omdat deze documenten gevoelige informatie bevatten, is het voor mij helaas niet mogelijk om deze op mijn website te plaatsen.
 
 ## Feedback bedrijfsbegeleider
 
