--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -1,5 +1,5 @@
 ﻿# Leerdoel 5 - Testen
-*Adviseren - Ik wil na afloop van mijn stage in staat zijn om een advies te geven over de bruikbaarheid van een nieuwe technologie.*
+*Ontwerpen - Ik wil na afloop van mijn stage hoe ik mijn code op een goede manier kan testen volgens een professionele teststrategie.*
 
 ## Inleiding  
 Het testen van software is zeer belangrijk. Als een bedrijf software oplevert waar veel en/of grote fouten in zitten, dan kan dit veel tijd en geld kosten. Om deze redenen wilde ik tijdens mijn stage leren hoe een bedrijf zoals Ranshuijsen hun software test, zodat ik zelf ook een goede teststrategie voor mijn eigen projecten kan ontwerpen.
