Content updates. Hopefully the last ones!

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -18,6 +18,6 @@ Voor dit leerdoel heb ik een testplan opgezet waarin het user management gedeelt
 ## Reflectie
 Uiteindelijk heb ik helaas niet zo veel over dit onderwerp geleerd als ik had gehoopt. Tijdens mijn opleiding heb ik al enkele testplannen moeten schrijven, en de testplannen van Ranshuijsen verschillen hier weinig mee. Ook heb ik weinig geleerd over het schrijven van _Unit Tests_, omdat Ranshuijsen hier zelf weinig gebruik van maakt. Ik had gehoopt dat zij een aantal technieken gebruikte waar ik nog nooit van had gehoord, maar uiteindelijk bleek dit niet het geval te zijn.
 
-Desondaks heb ik dankzij [Leerdoel 7](Content/Stage3/Leerdoelen/7) alsnog iets over het schrijven van _Unit Tests_ kunnen leren. Ik kwam er hierbij namelijk achter dat Dependency Injection enorm handig is bij het testen van applicaties die afhankelijk zijn van externe systemen. Door de componenten die met deze systemen communiceren te injecteren in plaats van direct aan de applicatie te koppelen, is het mogelijk om een zelfgemaakte imitatie te bouwen waarmee het systeem gemakkelijk kan worden getest. Deze methode zal zeker handig zijn als ik later projecten moet gaan testen.
+Desondanks heb ik dankzij [Leerdoel 7](Content/Stage3/Leerdoelen/7) alsnog iets over het schrijven van _Unit Tests_ kunnen leren. Ik kwam er hierbij namelijk achter dat Dependency Injection enorm handig is bij het testen van applicaties die afhankelijk zijn van externe systemen. Door de componenten die met deze systemen communiceren te injecteren in plaats van direct aan de applicatie te koppelen, is het mogelijk om een zelfgemaakte imitatie te bouwen waarmee het systeem gemakkelijk kan worden getest. Deze methode zal zeker handig zijn als ik later projecten moet gaan testen.
 
 Het liefst had ik meer vanuit Ranshuijsen geleerd over het testen van applicaties. Toch vind ik dat ik genoeg kennis tijdens mijn stage heb opgedaan om dit leerdoel als behaald te beschouwen.
