--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -12,7 +12,7 @@ Ik heb tijdens mijn stage over Dependency Injection geleerd door het simpelweg z
 Om het kort uit te leggen; een Design Pattern is een generieke en daarom herbruikbare manier om een bepaald project te bouwen. Het is een soort sjabloon die ontwikkelaars kunnen gebruiken bij het ontwerpen van hun systeem, ongeacht van wat voor een systeem dit precies is. _Dependency Injection_ is een design pattern waarbij dependencies van een applicatie niet direct aan de applicatie worden verbonden, maar in plaats daarvan geinjecteerd worden. Er wordt een object van de dependency gemaakt, die vervolgens als _service_ beschikbaar wordt gemaakt voor de verschillende onderdelen van het systeems. Dit zorgt ervoor dat deze dependencies gemakkelijk kunnen worden nagemaakt en vervangen, zodat het makkelijker wordt om de applicatie te testen of aan te passen.
 
 ## Bewijsmateriaal
-Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige ingelogde gebruiker ophalen. Ik heb hierbij bestaande services van andere projecten van Ranshuijsen bestudeerd en gebruikt als voorbeeld.
+Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige ingelogde gebruiker ophalen. Ik heb hiervoor bestaande services van andere projecten van Ranshuijsen bestudeerd en heb deze gebruikt als voorbeeld.
   
 Zoals eerder vermeld, is ook deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen. Dit heb ik gedaan door een  *DocumentService* te bouwen. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie _Markdown_ bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien.
 
