--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -9,11 +9,14 @@ Tijdens het werken aan mijn stageopdracht kwamen er twee vraagstukken naar boven
 
 Het eerste probleem waar we tegen aan liepen was het inlogsysteem. In het begin waren wij namelijk van plan om een geleidelijke migratie uit te voeren door onderdelen van het CRM één voor één over te zetten naar een nieuwe, aparte Blazor website. Dit betekende echter dat gebruikers twee keer moesten inloggen om het gehele systeem te kunnen gebruiken, wat niet ideaal was. Ik ben daarom ruim een week lang bezig geweest met het zoeken naar mogelijke oplossingen hiervoor. Dit heb ik gedaan door op het internet te zoeken naar artikelen en forumberichten van mensen die tegen hetzelfde of een soortgelijk probleem aan liepen, en door te onderzoeken hoe zij dit hebben aangepakt en opgelost. De resultaten van dit onderzoek heb ik verwerkt in een ontwerpdocument, die verschillende mogelijke oplossingen voorlegt.
 
-Ook hadden wij besloten om de oude TableGateways ORM te vervangen met Microsoft's EntityFramework. De gehele _Data Access Layer_ moest hiervoor worden omgebouwd, wat veel uitdagingen met zich mee bracht. Ik ben ruim een week bezig geweest met uitzoeken welke problemen we tegen aan zouden kunnen lopen, wat de mogelijke oplossingen voor deze problemen zijn, en welke andere beslissingen er gemaakt moesten worden. Ook deze informatie heb ik verwerkt in een onderzoeksdocument.
+Ook hadden wij besloten om de oude TableGateways ORM te vervangen met Microsoft's EntityFramework. De gehele _Data Access Layer_ moest hiervoor worden omgebouwd, wat veel uitdagingen met zich mee bracht. Ik ben ruim een week bezig geweest met uitzoeken welke problemen wij hierbij tegen kunnen komen, wat de mogelijke oplossingen voor deze problemen zijn, en welke andere beslissingen er gemaakt moesten worden. Ook deze informatie heb ik verwerkt in een onderzoeksdocument.
 
 ## Bewijsmateriaal
 Als bewijsmateriaal voor dit leerdoel heb ik twee ontwerpdocumenten geschreven. In deze documenten staat informatie die de bovenstaande vraagstukken beantwoorden door verschillende oplossingen voor problemen voor te leggen, en door alle beslissingen die gemaakt moesten worden op een rij te zetten. Omdat deze documenten gevoelige informatie bevatten, is het voor mij helaas niet mogelijk om deze op mijn website te plaatsen.
 
 ## Feedback bedrijfsbegeleider
+*Je hebt laten zien dat je in staat bent om zelf na te denken over wat de impact is van wijzigingen en hier concrete oplossingen voor te schetsen. Hierin is ook meegenomen wat de voor en nadelen zijn van de verschillende oplossingsrichtingen. 
+Naast het ontwerpen van de oplossing heb je ook nog aangetoond dat je het ontwerp ook kan realisateren waarmee je aantoont dat het ontwerp correct was.*
 
 ## Reflectie
+Ik vond beide problemen zeer interresant om te analyseren. De complexiteit van deze problemen gaven mij een goede uitdaging waar ik veel van heb kunnen leren. Ik heb nu een goed beeld van hoe ik dit soort grote wijzigingen zou moeten aanpakken en oplossen. Deze kennis kan ik later zeker goed gebruiken tijdens mijn werk. Ik vind daarom ook dat ik dit leerdoel behaald heb.
