Final v2 last change definitely for sure this time. Really!

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
@@ -30,6 +30,6 @@ Als bewijsmateriaal voor dit leerdoel, heb ik een document opgezet die kort de a
 
 
 ## Reflectie  
-Ik heb tijdens het werken aan dit leerdoel veel kennis opgedaan over hoe ik een ASP.NET systeem moet analyseren. Omdat ASP.NET een zeer populaire technologie is, verwacht ik dat deze kennis later erg handig zal zijn bij mijn werk. Mocht ik later bij een bedrijf gaan werken waar gebruik wordt gemaakt van ASP.NET, dan ben ik er vrij zeker van dat ik snel mijn weg zal kunnen vinden binnen de systemen die zij ontwikkelen. Ik vind daarom ook dat ik dit leerdoel heb behaald.
+Ik heb tijdens het werken aan dit leerdoel veel kennis opgedaan over hoe ik een ASP.NET systeem moet analyseren. Omdat ASP.NET een zeer populaire technologie is, verwacht ik dat deze kennis later erg handig zal zijn bij mijn werk. Mocht ik later bij een bedrijf gaan werken waar gebruik wordt gemaakt van ASP.NET, dan ben ik er vrij zeker van dat ik snel mijn weg zal kunnen vinden binnen de systemen die zij ontwikkelen. Dit leerdoel heb ik dan ook gehaald dankzij de kennis die ik hierover tijdens mijn stage heb opgedaan.
 
 Er zijn echter veel andere soorten systemen die op compleet andere manieren zijn opgebouwd. Als ik deze systemen wil analyseren, dan zal ik dat waarschijnlijk op een andere manier moeten aanpakken dan bij een ASP.NET systeem. Daarom wil ik in de toekomst een dergelijk systeem gaan analyseren om zo extra ervaring op te doen. Wellicht dat ik hier tijdens mijn afstudeerstage de kans voor krijg.
