--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
@@ -21,6 +21,6 @@ Naar mijn mening maakt Blazor het zo eenvoudig om websites te bouwen, dat ik het
 
 ## Reflectie  
   
-Door alle voor- en nadelen van Blazor op een rij te zetten, heb ik veel geleerd over waar een ontwikkelaar of organisatie op zou moeten letten als zij een nieuwe technologie willen uitkiezen. Ook heb ik een goede manier gevonden om deze voor- en nadelen te documenteren, waarmee ik deze informatie gemakkelijk met andere ontwikkelaars kan delen. Ik vind daarom ook dat ik dit leerdoel behaald heb.
+Door alle voor- en nadelen van Blazor op een rij te zetten, heb ik veel geleerd over waar een ontwikkelaar of organisatie op zou moeten letten als zij een nieuwe technologie willen uitkiezen. Ook heb ik een goede manier gevonden om deze voor- en nadelen te documenteren, waarmee ik deze informatie gemakkelijk met andere ontwikkelaars kan delen. Dit alles betekend daarom ook dat ik dit leerdoel behaald heb.
 
 Nadat ik de bovenstaande feedback van mijn bedrijfsbegeleider had ontvangen, heb ik mijn adviesplan aangepast zodat het ook informatie bevat over welke voor- en nadelen van Blazor voor het CRM van toepassing zijn.
