--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -20,4 +20,4 @@ Uiteindelijk heb ik helaas niet zo veel over dit onderwerp geleerd als ik had ge
 
 Desondanks heb ik dankzij [Leerdoel 7](Content/Stage3/Leerdoelen/7) alsnog iets over het schrijven van _Unit Tests_ kunnen leren. Ik kwam er hierbij namelijk achter dat Dependency Injection enorm handig is bij het testen van applicaties die afhankelijk zijn van externe systemen. Door de componenten die met deze systemen communiceren te injecteren in plaats van direct aan de applicatie te koppelen, is het mogelijk om een zelfgemaakte imitatie te bouwen waarmee het systeem gemakkelijk kan worden getest. Deze methode zal zeker handig zijn als ik later projecten moet gaan testen.
 
-Het liefst had ik meer vanuit Ranshuijsen geleerd over het testen van applicaties. Toch vind ik dat ik genoeg kennis tijdens mijn stage heb opgedaan om dit leerdoel als behaald te beschouwen.
+Het liefst had ik meer vanuit Ranshuijsen geleerd over het testen van applicaties, met name het automatiseren hiervan. Toch vind ik dat ik genoeg kennis tijdens mijn stage heb opgedaan om dit leerdoel te behalen.
