--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -19,4 +19,4 @@ Als bewijsmateriaal voor dit leerdoel heb ik twee ontwerpdocumenten geschreven. 
 Naast het ontwerpen van de oplossing heb je ook nog aangetoond dat je het ontwerp ook kan realisateren waarmee je aantoont dat het ontwerp correct was.*
 
 ## Reflectie
-Ik vond beide problemen zeer interresant om te analyseren. De complexiteit van deze problemen gaven mij een goede uitdaging waar ik veel van heb kunnen leren. Ik heb nu een goed beeld van hoe ik dit soort grote wijzigingen zou moeten aanpakken en oplossen. Deze kennis kan ik later zeker goed gebruiken tijdens mijn werk. Ik vind daarom ook dat ik dit leerdoel behaald heb.
+Ik vond beide problemen zeer interresant om te analyseren. De complexiteit van deze problemen gaven mij een goede uitdaging waar ik veel van heb kunnen leren. Ik heb nu een goed beeld van hoe ik dit soort grote wijzigingen zou moeten aanpakken en oplossen. Deze kennis kan ik later zeker goed gebruiken tijdens mijn werk, en ik heb hierdoor dan ook dit leerdoel behaald.
