--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -20,6 +20,6 @@ Zoals eerder vermeld, is ook deze website gemaakt met Blazor. Blazor heeft het D
 *Je hebt aangetoond niet alleen te snappen hoe het design pattern werkt met theorie, maar ook door dit in de praktijk correct toe te passen. Let op dat design patterns zelf niet "het beste" of "goed" zijn. Het zijn gemaakte keuzes door een architectect (of developer) die richting geven aan de rest van het systeem. Ieder systeem kan zijn eigen "beste" design patterns hebben.* 
 
 ## Reflectie
-Ik ben erg tevreden met de vooruitgang die ik bij dit leerdoel heb gemaakt. De kennis over Dependency Injection die ik tijdens mijn stage heb opgedaan zal mij waarschijnlijk enorm helpen bij mijn werk. Op het moment van schrijven ben ik zelfs al bezig met een hobby project waarin ik gebruik maak van deze kennis, en ik heb al enkele ideeën voor andere projecten waar ik deze kennis ook toe kan passen. Daarom vind ik zelf ook dat ik dit leerdoel behaald heb.
+Ik ben erg tevreden met de vooruitgang die ik bij dit leerdoel heb gemaakt. De kennis over Dependency Injection die ik tijdens mijn stage heb opgedaan zal mij waarschijnlijk enorm helpen bij mijn werk. Op het moment van schrijven ben ik zelfs al bezig met een hobby project waarin ik gebruik maak van deze kennis, en ik heb al enkele ideeën voor andere projecten waar ik deze kennis ook toe kan passen. Dit leerdoel heb ik daarom zeker behaald.
 
 Natuurlijk zijn er echter nog veel meer verschillende design patterns dan alleen Dependency Injection en MVC. Voor mijn 3rde jaars minor heb ik mij daarom ingeschreven voor de minor _Software Engineering_, waarbij meer van dit soort design patterns zullen worden behandeld.
