--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -27,6 +27,6 @@ Ook heb ik Blazor WASM gebruikt tijdens het opzetten van mijn portfoliowebsite. 
 ## Reflectie
 Ik heb dankzij dit leerdoel genoeg kennis over Blazor opgedaan, dat ik zeker weet dat ik het bij mijn eigen projecten kan gaan gebruiken. Dit ben ik ook zeker van plan, omdat ik Blazor een erg leuke technologie vindt om mee te werken.
 
-Wel zou het makkelijker zijn geweest als ik van te voren al wat kennis over ASP.NET Core had, omdat Blazor hier veel onderdelen van gebruikt. Ik had echter nauwelijks met ASP.NET Core gewerkt voordat ik met mijn stage begon, waardoor ik een stuk kennis miste. Desondanks is het mij toch gelukt om de basis van Blazor onder de knie te krijgen. Persoonlijk vind ik daarom ook dat ik dit leerdoel behaald heb.
+Wel zou het makkelijker zijn geweest als ik van te voren al wat kennis over ASP.NET Core had, omdat Blazor hier veel onderdelen van gebruikt. Ik had echter nauwelijks met ASP.NET Core gewerkt voordat ik met mijn stage begon, waardoor ik een stuk kennis miste. Desondanks is het mij toch gelukt om de basis van Blazor onder de knie te krijgen, waardoor ik alsnog dit leerdoel heb kunnen behalen.
 
 Natuurlijk zijn er nog veel andere technologieën in de wereld, en dit aantal blijft alleen maar groeien. In de toekomst zal ik daarom veel andere technologieën moeten onderzoeken, en ben ik nog lang niet uitgeleerd. Op het moment ben ik daarom van plan om te gaan experimenteren met Microsoft's [.NET MAUI](https://devblogs.microsoft.com/dotnet/introducing-net-multi-platform-app-ui/) zodra deze wordt uitgebracht.
