--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -38,4 +38,4 @@ Helaas heb ik door de COVID-19 pandemie het meerendeel van mijn stage thuis gewe
 *Ik heb hier niet echt feedback op anders dan dat je dat keurig gedaan hebt*
 
 ## Reflectie
-Na het afronden van deze stage heb ik een veel beter beeld over wat voor een regels en procedures ik kan verwachten als ik later bij een softwarebedrijf zal werken. Natuurlijk zal het bedrijf waar ik later zal werken waarschijnlijk andere regels en procedures hanteren, maar ik verwacht dat de meeste ongeveer op hetzelfde neer zullen komen. Ik verwacht wel dat er een aantal kleinere regels of procedures zijn die ik gemist heb, maar ik denk dat ik de belangrijkste regels hierboven genoemd heb. Ik vind daarom ook dat ik dit leerdoel behaald heb.
+Na het afronden van deze stage heb ik een veel beter beeld over wat voor een regels en procedures ik kan verwachten als ik later bij een softwarebedrijf zal werken. Natuurlijk zal het bedrijf waar ik later zal werken waarschijnlijk andere regels en procedures hanteren, maar ik verwacht dat de meeste ongeveer op hetzelfde neer zullen komen. Ik verwacht wel dat er een aantal kleinere regels of procedures zijn die ik gemist heb, maar ik denk dat ik de belangrijkste regels hierboven genoemd heb. Daarom heb ik ook dit leerdoel behaald.
