--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
@@ -20,5 +20,5 @@ Om dit leerdoel te behalen heb ik tijdens het opzetten van alle eerder genoemde 
 *Je hebt denk ik inmiddels ervaren dat hoe iets eruit ziet (ook een onderdeel van design) belangrijk kan zijn en je hebt hier zeker stappen in gemaakt. Toch ben je er dan niet. Er zijn veel facetten van design die van belang zijn, denk aan UI en UX. Voor jou specifiek als techneut in hart en nieren moet je proberen om hier aandacht voor te blijven houden en ook hier in te verdiepen.*
 
 ## Reflectie
-Ook al is de tip die ik van mijn bedrijfsbegeleider heb gekregen enorm handig en zal hij mij enorm helpen, heb niet het idee dat ik tijdens mijn stage veel heb geleerd over dit onderwerp. Ik weet nu wel waarom ik meer aandacht moet besteden aan het uiterlijk van mijn documenten en programmas, maar ik weet niet zeker hoe ik dit het beste zou kunnen doen. Ook mijn bedrijfsbegeleider heeft dit in zijn feedback vermeldt. Hier had ik graag wat meer over willen weten, waardoor ik niet vind dat ik leerdoel gehaald heb. Ik hoop dat ik later in mijn studie of tijdens mijn werk hier wat meer over kan leren.
+Ook al is de tip die ik van mijn bedrijfsbegeleider heb gekregen enorm handig en zal hij mij enorm helpen, heb niet het idee dat ik tijdens mijn stage veel heb geleerd over dit onderwerp. Ik weet nu wel waarom ik meer aandacht moet besteden aan het uiterlijk van mijn documenten en programmas, maar ik weet niet zeker hoe ik dit het beste zou kunnen doen. Ook mijn bedrijfsbegeleider heeft dit in zijn feedback vermeldt. Hier had ik graag wat meer over willen weten, waardoor ik dit leerdoel helaas niet gehaald heb. Ik hoop dat ik later in mijn studie of tijdens mijn werk hier wat meer over kan leren.
 
