--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -7,14 +7,16 @@ Ik heb tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten 
 Het bleek dat de twee technologieën die ik voor mijn stageopdracht moest gebruiken (ASP.NET Core en Blazor) beide gebruik maakte van Dependency Injection. Tijdens het werken aan mijn stageopdracht ben ik daarom ook al vrij snel hiermee in aanraking gekomen. Na informatie over Dependency Injection in ASP.NET Core op het Internet op te zoeken en een voorbeeld van een medewerker te analyseren, is het mij gelukt om mijn eigen service te bouwen. Deze service kan in verschillende onderdelen van het CRM worden geïnjecteerd om zo informatie over de ingelogde gebruiker op te kunnen halen.
 
 ## Werkwijze
-Ik heb tijdens mijn stage over Dependency Injection geleerd door het simpelweg zelf te gebruiken. Ik heb met behulp van informatie die ik gevonden had op het internet (van bijvoorbeeld [Microsoft's website](https://docs.microsoft.com/en-us/aspnet/core/fundamentals/dependency-injection?view=aspnetcore-5.0)) zelf een aantal services kunnen maken, die ik vervolgens via Dependency Injection heb kunnen injecteren. Door zelf gebruik te maken van Dependency Injection heb ik een goed beeld kunnen opbouwen van wat het precies is en hoe het werkt.
+Ik heb tijdens mijn stage over Dependency Injection geleerd door het simpelweg zelf te gebruiken. Ik heb met behulp van informatie die ik gevonden had op het internet (van bijvoorbeeld [Microsoft's website](https://docs.microsoft.com/en-us/aspnet/core/fundamentals/dependency-injection?view=aspnetcore-5.0)) zelf een aantal services kunnen maken, die ik vervolgens via Dependency Injection heb kunnen injecteren. Door zelf gebruik te maken van Dependency Injection heb ik een goed beeld kunnen opbouwen van wat het precies is en hoe het werkt.  
+  
+_Dependency Injection_ is een design pattern waarbij dependencies van een applicatie niet direct aan de applicatie worden verbonden, maar in plaats daarvan geinjecteerd worden. Er wordt een object van de dependency gemaakt, die vervolgens als _service_ beschikbaar wordt gemaakt voor de verschillende onderdelen van het systeems. Dit zorgt ervoor dat deze dependencies gemakkelijk kunnen worden nagemaakt en vervangen, zodat het makkelijker wordt om de applicatie te testen of aan te passen. Ook kunnen deze services gemakkelijk worden hergebruikt in andere projecten. ASP.NET maakt standaard al gebruik van Dependency Injection, en geeft ontwikkelaars de mogelijkheid dit systeem verder uit te breiden. 
 
-Om het kort uit te leggen; een Design Pattern is een generieke en daarom herbruikbare manier om een bepaald project te bouwen. Het is een soort sjabloon die ontwikkelaars kunnen gebruiken bij het ontwerpen van hun systeem, ongeacht van wat voor een systeem dit precies is. _Dependency Injection_ is een design pattern waarbij dependencies van een applicatie niet direct aan de applicatie worden verbonden, maar in plaats daarvan geinjecteerd worden. Er wordt een object van de dependency gemaakt, die vervolgens als _service_ beschikbaar wordt gemaakt voor de verschillende onderdelen van het systeems. Dit zorgt ervoor dat deze dependencies gemakkelijk kunnen worden nagemaakt en vervangen, zodat het makkelijker wordt om de applicatie te testen of aan te passen.
+Ook Ranshuijsen maakt veel gebruik van Dependency Injection in hun projecten, omdat zij willen profiteren van de bovengenoemde voordelen. Zij hebben bijvoorbeeld services gebouwd die hun systemen toegang geven tot bepaalde data, zoals gebruikersinformatie.
 
 ## Bewijsmateriaal
-Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige ingelogde gebruiker ophalen. Ik heb hiervoor bestaande services van andere projecten van Ranshuijsen bestudeerd en heb deze gebruikt als voorbeeld.
+Voor mijn stageopdracht heb ik een *UserService* gemaakt. Deze service geeft de verschillende onderdelen van het vernieuwde CRM systeem de mogelijkheid om gegevens over de huidige ingelogde gebruiker op te halen. Ook kan hiermee makkelijk worden gecontroleerd of de gebruiker toegang heeft tot bepaalde onderdelen van het systeem. Ik heb deze service gebouwd door soortgelijke services van andere Ranshuijsen projecten te bestuderen en deze als voorbeeld te gebruiken. De code van deze service is [hier te vinden](Content/Stage3/Bewijsmateriaal/7).
   
-Zoals eerder vermeld, is ook deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen. Dit heb ik gedaan door een  *DocumentService* te bouwen. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie _Markdown_ bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien.
+Zoals eerder vermeld, is ook deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen. Dit heb ik gedaan door een  *DocumentService* te bouwen. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie _Markdown_ bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien. De code van deze service is [hier te vinden](https://github.com/TehNolz/Portfolio/blob/master/Portfolio/DocumentService.cs).
 
 ## Feedback bedrijfsbegeleider
 *Je hebt aangetoond niet alleen te snappen hoe het design pattern werkt met theorie, maar ook door dit in de praktijk correct toe te passen. Let op dat design patterns zelf niet "het beste" of "goed" zijn. Het zijn gemaakte keuzes door een architectect (of developer) die richting geven aan de rest van het systeem. Ieder systeem kan zijn eigen "beste" design patterns hebben.* 
